--- a/control
+++ b/control
@@ -7,3 +7,4 @@ Description: An awesome MobileSubstrate tweak!
 Maintainer: Sassoty <sassoty@gmail.com>
 Author: Sassoty <sassoty@gmail.com>
 Section: Tweaks
+Depiction: http://beta-repo.sassoty.com/deps.php?pkg=com.sassoty.screencrop
